2009-10-05  Kent Tamura  <tkent@chromium.org>

Reviewed by Eric Seidel.

        Tests to check if validation-related CSS selectors are applied immediately.
        https://bugs.webkit.org/show_bug.cgi?id=28868

        * fast/forms/input-live-pseudo-selectors-expected.txt: Added.
        * fast/forms/input-live-pseudo-selectors.html: Added.
        * fast/forms/resources/input-live-pseudo-selectors.js: Added.
        * fast/forms/resources/live-pseudo-selectors.css: Added.
        * fast/forms/resources/textarea-live-pseudo-selectors.js: Added.
        * fast/forms/textarea-live-pseudo-selectors-expected.txt: Added.
        * fast/forms/textarea-live-pseudo-selectors.html: Added.
2009-10-05  Kent Tamura  <tkent@chromium.org>

        Reviewed by Eric Seidel.

        Update style immediately when validation-related values are updated.
        https://bugs.webkit.org/show_bug.cgi?id=28868

        In order to apply :valid, :invalid, :optional or :required lively,
          - call setNeedsStyleRecalc() when properties which can change
            willValidate state are updated, and
             (Parent form element, name, disabled, readonly)
          - call updateValidity() when properties which can change validity
            state are updated. (value, pattern, required)

        Tests: fast/forms/input-live-pseudo-selectors.html
               fast/forms/textarea-live-pseudo-selectors.html

        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElement::HTMLFormControlElement):
        (WebCore::HTMLFormControlElement::parseMappedAttribute):
        (WebCore::HTMLFormControlElement::required):
        (WebCore::HTMLFormControlElement::updateValidity):
        * html/HTMLFormControlElement.h:
        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setInputType):
        (WebCore::HTMLInputElement::parseMappedAttribute):
        (WebCore::HTMLInputElement::setValue):
        (WebCore::HTMLInputElement::setValueFromRenderer):
        (WebCore::HTMLInputElement::setFileListFromRenderer):
        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::setValue):
        * rendering/RenderTextControlMultiLine.cpp:
        (WebCore::RenderTextControlMultiLine::subtreeHasChanged):

Canonical link: https://commits.webkit.org/40664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49105 268f45cc-cd09-0410-ab3c-d52691b4dbfc